clusters/talos-cluster/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: postgres
  annotations:
    external-dns.alpha.kubernetes.io/hostname: postgres.horus
spec:
  selector:
    app: postgres-deployment
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
      protocol: TCP
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer-service
  namespace: postgres
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pgbouncer.horus
spec:
  selector:
    app: pgbouncer
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
      protocol: TCP
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: pgvector-service
  namespace: postgres
spec:
  selector:
    app: pgvector-deployment
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
      protocol: TCP
  type: ClusterIP
