clusters/talos-cluster/postgres/tcpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: postgres-route
  namespace: postgres
spec:
  parentRefs:
    - name: envoy-tcp-gateway
      namespace: gateway
      sectionName: postgres-listener
  rules:
    - backendRefs:
        - name: postgres-service
          port: 5432
